--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 』",
-    "description": "〔 سـورس الملك 𝚂𝙾𝚄𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : 𝙰𝙱𝙳𝚄𝙻𝙻𝙰𝙷",
-    "logo": "https://graph.org/file/2f199ef466e7950dd5e79.jpg",
+    "name": "سورس الملك ميوزك",
+    "description": "- مطـور السـورس : 𝙰𝙱𝙳𝚄𝙻𝙻𝙰𝙷",
+    "logo": "https://telegra.ph/file/9838cadaf38e425f07367.jpg",
     "keywords": [
     "python3",
     "telegram",
