--- a/app.json
+++ b/app.json
@@ -66,7 +66,7 @@
       },
       "GIT_TOKEN": {
         "description": "كود توكن الحساب",
-        "value": "None",
+        "value": "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",
         "required": true
       },
       "SUPPORT_CHAT": {
@@ -84,14 +84,9 @@
         "value": "WG_19",
         "required": true
       },
-      "AUTO_LEAVING_ASSISTANT": {
-        "description": "اذا تريد ان يغادر الحساب المساعد بعد انتهاء المحادثه الصوتيه اكتب True .",
-        "value": "False",
-        "required": false
-      },
       "LOGGER_ID": {
         "description": "ادخل ايدي مجموعة السجل بجانب الرقم -100 فـي المربع〔 سوي مجموعة جديدة وروح لاعدادات المجموعة وخلي السجل ظاهر .. بعدها ارفع البوت والحساب المساعد إشـراف وافتـح المكالمه بعدها جيب ايدي المجموعة لهنا 〕.",
-        "value": "-100",
+        "value": "",
         "required": true
       }
     },
