--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "سورس نجد ميوزك",
-    "description": "- مطـور السـورس : NGD",
-    "logo": "https://telegra.ph/file/9838cadaf38e425f07367.jpg",
+    "name": "『 𝚂𝚄𝙾𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 』",
+    "description": "〔 سـورس الملك 𝚂𝙾𝚄𝚁𝙲𝙴 𝙺𝙸𝙽𝙶 𖤍 \n افضـل سـورس لتشغيل الصوتيات في المكالمه  › تحديثـات متواصله › 〔 حصريـاً 〕\n - مطـور السـورس : 𝙰𝙱𝙳𝚄𝙻𝙻𝙰𝙷",
+    "logo": "https://graph.org/file/2f199ef466e7950dd5e79.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -24,6 +24,11 @@
         "value": "986cb4ba434870a62fe96da3b5f6d411",
         "required": true
       },
+      "GPT_NAME": {
+        "description": "اسم امر الذكاء الاصطناعي.",
+        "value": "",
+        "required": false
+      },
       "BOT_NAME": {
         "description": "اسم البوت بالعربي.",
         "value": "",
@@ -41,7 +46,7 @@
       },
       "MONGO_DB_URI": {
         "description": "لا تغيره. او قم بانشاء قاعده البيانات. الشرح https://t.me/EF_19/2.",
-        "value": "mongodb+srv://Music:Music@cluster0.yjgit72.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+        "value": "",
         "required": true
       },
       "OWNER_ID": {
@@ -66,12 +71,7 @@
       },
       "GIT_TOKEN": {
         "description": "كود توكن الحساب",
-        "value": "",
-        "required": true
-      },
-      "SUPPORT_CHAT": {
-        "description": "رابط جروب الدعم.",
-        "value": "https://t.me/YMMY8",
+        "value": "None",
         "required": true
       },
       "CHANNEL_NAME": {
@@ -80,9 +80,19 @@
         "required": true
       },
       "CHANNEL_LINK": {
-        "description": "يوزر قناتك بدون @.",
-        "value": "YMMY8",
+        "description": "رابط قناتك.",
+        "value": "https://t.me/WG_19",
         "required": true
+      },
+      "SUPPORT_CHAT": {
+        "description": "رابط قروب الدعم.",
+        "value": "https://t.me/WG_19",
+        "required": true
+      },
+      "AUTO_LEAVING_ASSISTANT": {
+        "description": "اذا تريد ان يغادر الحساب المساعد بعد انتهاء المحادثه الصوتيه اكتب True .",
+        "value": "False",
+        "required": false
       },
       "LOGGER_ID": {
         "description": "ادخل ايدي مجموعة السجل بجانب الرقم -100 فـي المربع〔 سوي مجموعة جديدة وروح لاعدادات المجموعة وخلي السجل ظاهر .. بعدها ارفع البوت والحساب المساعد إشـراف وافتـح المكالمه بعدها جيب ايدي المجموعة لهنا 〕.",
