--- a/app.json
+++ b/app.json
@@ -34,6 +34,11 @@
         "value": "None",
         "required": true
       },
+      "BOT_TOKEN": {
+        "description": "ضع هنا تكون البوت الذي صنعته من @BotFather.",
+        "value": "",
+        "required": true
+      },
       "BOT_NAME": {
         "description": "اسم البوت بالعربي.",
         "value": "",
